--- a/config/display_config-auto_saved.json
+++ b/config/display_config-auto_saved.json
@@ -1,1 +1,1 @@
-{"brightness": 50, "menu": 0, "left": false, "right": true, "up": true, "down": true, "sound": true}
+{"brightness": 50, "menu": 0, "left": true, "right": true, "up": true, "down": true, "sound": false}
