--- a/config/display_config-default.json
+++ b/config/display_config-default.json
@@ -1,1 +1,1 @@
-{"brightness": 50, "menu": 0, "left": false, "right": false, "up": true, "down": true, "sound": false, "status_led":true}
+{"brightness": 50, "menu": 0, "left": false, "right": false, "up": true, "down": true, "sound": false, "status_led":true, "busy": false}
