--- a/config/display_config-custom.json
+++ b/config/display_config-custom.json
@@ -1,1 +1,1 @@
-{"brightness": 35, "menu": 0, "left": true, "right": true, "up": true, "down": true, "sound": false, "status_led": true, "busy": false}
+{"brightness": 35, "menu": 0, "left": true, "right": true, "up": true, "down": true, "sound": false, "status_led": true, "busy": false, "standby_time":15}
