--- a/config/display_config-auto_saved.json
+++ b/config/display_config-auto_saved.json
@@ -1,1 +1,1 @@
-{"brightness": 50, "menu": 0, "left": false, "right": false, "up": true, "down": true, "sound": false, "status_led": true, "busy": false, "standby_time":15}
+{"brightness": 75, "menu": 0, "sound": true, "status_led": true, "busy": false, "standby_time": 15}
